--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "helmet": "^3.22.0",
     "knex": "^0.20.13",
     "morgan": "^1.10.0",
-    "pg": "^8.0.0"
+    "pg": "^8.0.0",
+    "xss": "^1.0.6"
   },
   "devDependencies": {
     "chai": "^4.2.0",
